--- a/package.json
+++ b/package.json
@@ -12,10 +12,21 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.14",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.0",
+    "immer": "^10.0.3",
     "react": "^18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-hook-form": "^7.47.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
+    "react-scrollbar": "^0.5.6",
+    "react-toastify": "^9.1.3",
+    "redux-logger": "^3.0.6",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
